# ditherpunker

./: .gitignore  Cargo.toml  README.md
benches/: bayer_transform_fit_strategy.rs  bayer_transform_par_fit_strategy.rs  bayer_transform_par_strategy.rs  bayer_transform_strategy.rs  bayer_transform_utils.rs  bench_utils.rs  grayscale_transform.rs  grayscale_transform_par.rs  iteration.rs  threshold_utils.rs  transform_utils.rs  utils.rs
ditherpunker-macros/: Cargo.toml
ditherpunker-macros/src/: lib.rs
src/: color_palette.rs  config.rs  dithering.rs  error.rs  image_utils.rs  lib.rs  main.rs  pixel_util.rs  tests.rs  texture.rs  transform.rs  utils.rs
src/benches/: core.rs  mod.rs
src/dithering/: error_diffusion.rs  mod.rs  threshold.rs
src/dithering/error_diffusion/: matrices.rs  mod.rs
src/dithering/threshold/: bayer.rs  bayer_transform.rs  blue_noise.rs  matrices.rs  mod.rs  multi_impl.rs  threshold_transform.rs
src/tests/: bayer_strategy.rs  iterator.rs  mod.rs  simd_checks.rs  utils.rs
src/transform/: grayscale.rs  pipe.rs  traits.rs
src/utils/: buffer.rs  image.rs  iterator.rs  mod.rs  num.rs  pixel.rs  simd.rs  transform.rs
xtask/: Cargo.toml
xtask/src/: main.rs
