[package]
name = "ditherpunker"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "xtask"]

[dependencies]
image = "0.25.9"
itertools = "0.14.0"
# TODO: replace with serde
json = "0.12.4"
lazy_static = "1.5.0"
multiversion = "0.8.0"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["rayon", "plotters", "cargo_bench_support", "html_reports"]}

[[bench]]
name = "bayer_threshold"
harness = false

[[bench]]
name = "iteration"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
